@@ -30,8 +30,5 @@ SKIP: {
   $edit -> set_popup_range(6, 12);
 
   $edit -> set_flags([qw(show_time 24_hr)]);
-  TODO: {
-    local $TODO = "Test::More seems to be broken";
-    is_deeply($edit -> get_flags(), [qw(show-time 24-hr)]);
-  }
+  is_deeply($edit -> get_flags(), [qw(show-time 24-hr)]);
 }
